# falcon-base

./: .dockerignore  Dockerfile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
app/: errors.py  routing.py
app/hooks/: validate.py
app/middleware/: cors.py  request_logger.py
app/models/: base.py  user.py
app/openapi/: openapi.yaml
app/resources/: base.py  health.py  openapi_docs.py  user.py
app/schemas/: __init__.py  user.py
app/services/: user.py
config/: settings.py
tests/: test_openapi_docs.py
